fixed text wrap on header-top-mob

--- a/src/layout/header/header-two.module.scss
+++ b/src/layout/header/header-two.module.scss
@@ -11,3 +11,7 @@
         margin-left: 10px;
     }
 }
+
+.headerTopMob {
+    text-wrap: nowrap;
+}
